crates/ars-core/tests/ui/component_part_on_struct.stderr
error: ComponentPart can only be derived for enums
 --> tests/ui/component_part_on_struct.rs:4:1
  |
4 | struct Part;
  | ^^^^^^^^^^^^
