crates/ars-core/tests/ui/component_part_on_struct.rs
use ars_core::ComponentPart;

#[derive(ComponentPart)]
struct Part;

fn main() {}
